# Agent-Orchestratation

./: .gitignore  README.md  client.py  pyproject.toml  requirements.txt  server.py
calculator_agent/: adk_agent.py  adk_agent_executor.py  main.py  pyproject.toml  test_client.py
client/: client.py  pyproject.toml
marketing_agent/: adk_agent.py  adk_agent_executor.py  main.py  pyproject.toml
